# oscaar90_OpsGuard-AI

./: .env.example  .gitignore  .opsguardignore  CHANGELOG.md  FEEDBACK.md  LICENSE  README.md  SESSION.md  action.yml  pyproject.toml
.github/workflows/: opsguard.yml  release.yml
docs/: PLAN_MEJORA_TFM_BraisMoure.md  PROMPT_MEJORA_TESTING.md  benchmark-models.md  ejemplos-reales.md  guia-local.md
docs/adr/: 0001-patron-gatekeeper-local.md  0002-prompting-en-ingles.md  0003-telemetria-y-finops.md  0004-fail-closed-policy.md  0005-diff-truncation-strategy.md
prompts/: README.md  system_prompt.txt
src/: ai.py  console_ui.py  ingest.py  main.py  security.py  version.py
tests/: test_ai.py  test_e2e.py  test_ingest.py  test_security.py
tests/fixtures/: README.md
tests/fixtures/vulnerable_app/: ai_agent_commit.py  auth_middleware.py  legacy_login.py  supply_chain_attack.py
web/src/app/: page.tsx
